--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,19 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+kernel:
+    resource: App\Kernel
+    type: attribute
+
+# CONTROLLERS:
+#
+
+# test_index:
+#     path: /test
+#     # the controller value has the format 'controller_class::method_name'
+#     controller: App\Controller\TestController::index
+
+#     # if the action is implemented as the __invoke() method of the
+#     # controller class, you can skip the '::method_name' part:
+#     # controller: App\Controller\BlogController
