--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/mailer": "6.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.3.*",
+        "symfony/security-bundle": "6.3.*",
         "symfony/yaml": "6.3.*",
         "twig/twig": "^3.0"
     },
